Update the post about JDBC

--- a/_posts/其他知识技术分享/2021-01-05-电基.md
+++ b/_posts/其他知识技术分享/2021-01-05-电基.md
@@ -82,7 +82,7 @@ math: true
   | 电流放大倍数 | 较大                                                         | 较大                                                         | 小于1，不能放大电流                                          |
   | 输入电阻     | 适中                                                         | 较大                                                         | 小                                                           |
   | 输出电阻     | 适中                                                         | 较小（带负载能力较强）                                       | 适中                                                         |
-  | 应用         | 常应用于对输入电阻、输出电阻无特殊要求的地方，作为一般低频多级放大电路的输入级、中间级或输出级。 | **射极跟随器**，常应用于多级放大电路中高输入阻抗的输入级，低输出阻抗的输出级，或者作为实现阻抗变换的缓冲级。 | 频率特性好，常用于宽频带放大器和高频放大器。                 |
+  | 应用         | 常应用于对输入电阻、输出电阻无特殊要求的地方，<br/>作为一般低频多级放大电路的输入级、<br/>中间级或输出级。 | **射极跟随器**，常应用于多级放大电路中<br/>高输入阻抗的输入级，低输出阻抗<br/>的输出级，或者作为实现阻抗变换的缓冲级。 | 频率特性好，常用于宽频带<br/>放大器和高频放大器。            |
 
 ## Chap8
 
