Update the post about cpp

--- a/_posts/OnlineJudge/LeetCode/2020-08-04-LeetCode周赛200.md
+++ b/_posts/OnlineJudge/LeetCode/2020-08-04-LeetCode周赛200.md
@@ -2,7 +2,7 @@
 title: Leetcode 周赛#200 题解
 author: JoyDee
 categories: [Online Judge, LeetCode]
-tags: [算法-模拟(优化), 思维-分段统计极值, 算法-双指针, 算法-贪心]
+tags: [算法-模拟, 思维-分段统计极值, 算法-双指针, 算法-贪心]
 date: 2020-08-04 00:10:00 +0800
 math: true
 ---
@@ -34,7 +34,7 @@ math: true
 
 总的来说，我并不需要模拟"较小的整数移至数组的末尾"的操作，$O(n)$即可
 
-```C++
+```c++
 class Solution {
 public:
     int getWinner(vector<int>& arr, int k) {
@@ -81,7 +81,7 @@ public:
 
 我们不应该只比较行与行之间的相对大小，更要注意到第$i$行所需的0个数不小于$(n-i-1)$，我们从第0行开始遍历，一旦发现某一行满足条件，就无需再管当前行。检查下一行，如果不满足条件，我们要向下寻找能够满足条件且是**第一个**的(即该行0个数大于等于检查行所需0个数)，并把它交换上来。交换的同时统计操作次数，当遍历到最底行时便得到答案。
 
-```C++
+```c++
 class Solution {
 public:
     int minSwaps(vector<vector<int>>& grid) {
@@ -145,7 +145,7 @@ public:
 
 ![ans](https://gitee.com/j__strawhat/MyImages/raw/master/20200803234022.png)
 
-```C++
+```c++
 typedef long long ll;
 class Solution {
 private: const int MOD = 1e9 + 7;
