Modify the categories or titles of the posts

--- a/_posts/操作系统/Linux/2020-11-25-Linux文件系统、文件基本属性、目录处理及文件查看.md
+++ b/_posts/操作系统/Linux/2020-11-25-Linux文件系统、文件基本属性、目录处理及文件查看.md
@@ -1,7 +1,7 @@
 ---
 title: Linux文件系统、文件基本属性、目录处理及文件查看
 author: JoyDee
-categories: [操作系统, Linux]
+categories: [Operating Systems, Linux]
 tags: [Linux]
 math: false
 ---
