--- a/_posts/操作系统/Linux/2020-11-28-在Ubuntu 20.04配置FTP服务器.md
+++ b/_posts/操作系统/Linux/2020-11-28-在Ubuntu 20.04配置FTP服务器.md
@@ -1,7 +1,7 @@
 ---
 title: 在Ubuntu 20.04配置FTP服务器
 author: JoyDee
-categories: [操作系统, Linux]
+categories: [Operating Systems, Linux]
 tags: [Linux]
 math: false
 ---
