--- a/_posts/操作系统/Linux/2020-11-24-Ubuntu系统安装、配置及软件教程集合.md
+++ b/_posts/操作系统/Linux/2020-11-24-Ubuntu系统安装、配置及软件教程集合.md
@@ -1,7 +1,7 @@
 ---
 title: Ubuntu系统安装、配置及软件教程集合
 author: JoyDee
-categories: [操作系统, Linux]
+categories: [Operating Systems, Linux]
 tags: [Linux]
 math: false
 ---
