--- a/_posts/操作系统/Linux/2020-11-25-Linux 概述、常用快捷键、apt命令.md
+++ b/_posts/操作系统/Linux/2020-11-25-Linux 概述、常用快捷键、apt命令.md
@@ -1,7 +1,7 @@
 ---
 title: Linux 概述、常用快捷键、apt命令
 author: JoyDee
-categories: [操作系统, Linux]
+categories: [Operating Systems, Linux]
 tags: [Linux]
 math: false
 ---
