--- a/_posts/操作系统/Linux/2020-11-27-Linux的用户和用户组管理.md
+++ b/_posts/操作系统/Linux/2020-11-27-Linux的用户和用户组管理.md
@@ -1,7 +1,7 @@
 ---
 title: Linux的用户和用户组管理
 author: JoyDee
-categories: [操作系统, Linux]
+categories: [Operating Systems, Linux]
 tags: [Linux]
 math: false
 ---
