Update the post of JS01

--- a/_posts/Web前端/2021-02-10-JS1.md
+++ b/_posts/Web前端/2021-02-10-JS1.md
@@ -7,15 +7,35 @@ date: 2021-02-08 23:19:00 +0800
 math: true
 ---
 
+> [HTML](https://developer.mozilla.org/zh-CN/docs/Glossary/HTML)是一种标记语言，用来结构化我们的网页内容并赋予内容含义，例如定义段落、标题和数据表，或在页面中嵌入图片和视频。
+>
+> [CSS](https://developer.mozilla.org/zh-CN/docs/Glossary/CSS) 是一种样式规则语言，可将样式应用于 HTML 内容， 例如设置背景颜色和字体，在多个列中布局内容。
+>
+> [JavaScript](https://developer.mozilla.org/zh-CN/docs/Glossary/JavaScript) 是一种脚本语言，可以用来创建动态更新的内容，控制多媒体，制作图像动画，等等。
+
 # Chapte 1. 基础语法
 
 ## 1.1 概述
 
-JavaScript，是一种轻量级的编程语言，也是一种客户端脚本语言。
+**JavaScript 是轻量级解释型语言**。它是可插入 HTML 页面的编程代码，每一个浏览器都有 JavaScript 的解析引擎，故 JavaScript 不需要编译，直接就能被浏览器解析执行了（即，它是运行在浏览器中的**解释型**的编程语言，“编译过程发生在代码运行中，而非之前”）。
 
-它是可插入 HTML 页面的编程代码，每一个浏览器都有 JavaScript 的解析引擎，故 JavaScript 不需要编译，直接就能被浏览器解析执行了（即，它是运行在浏览器中的**解释型**的编程语言）。
+> **关于 解释(interpret) 与 编译(compile)：**
+>
+> 在**解释型**语言中，代码自上而下运行，且**实时返回运行结果**。代码在由浏览器执行前，无需将其转化为其他形式，代码直接以 文本格式 被接收和处理。
+>
+> 对于**编译型**语言，需将其代码转化（编译）成另一种形式才能运行。比如 C/C++ 先被编译成汇编语言，然后才能由计算机运行。程序将以二进制格式（由程序源代码产生的）运行。
 
-它支持**面向对象程序设计**，命令式编程，以及函数式编程。它提供语法来操控文本、数组、日期以及正则表达式等，不支持 I/O，比如网络、存储和图形等，但这些都可以由它的宿主环境提供支持。
+JavaScript 是**客户端**脚本语言，客户端代码是在用户的电脑上运行的代码，在浏览一个网页时，它的客户端代码就会被下载，然后由浏览器来运行并展示。
+
+> 当然，流行的服务器端 web 语言也包括了 JavaScript，本文着重讨论客户端 JavaScript
+
+JavaScript 支持**面向对象程序设计**，命令式编程，以及函数式编程。它提供语法来操控文本、数组、日期以及正则表达式等，不支持 I/O，比如网络、存储和图形等，但这些都可以由它的宿主环境提供支持。
+
+> **关于 动态代码 与 静态代码：**
+>
+> **“动态”** 是指是指通过按需生成新内容来更新 web 页面 / 应用，使得不同环境下显示不同内容。“动态” 既适用于描述服务器端语言，在服务器上动态生成新内容，（比如从数据库中提取信息） ；也适用于 客户端 JavaScript，在用户端浏览器中动态生成新内容（比如说创建一个新的 HTML 表格，用从服务器请求到的数据填充，然后在网页中向用户展示这个表格）。
+>
+> **“静态”**页面是指没有动态更新内容的页面。
 
 JavaScript常用来完成以下任务：
 
@@ -64,12 +84,181 @@ JavaScript常用来完成以下任务：
 
 > JS 的注释与 C/C++、Java 相同，`//` 单行注释、`/* */` 多行注释。
 
-## 1.3 数据类型
+## 1.3 变量与数据类型
 
+变量仅仅是一个用于**存储数值的容器**（不是数值本身），它能够存储任何东西，包括字符串和数字，甚至是函数。
 
+### 1.3.1 变量声明与初始化
 
+使用 `var` 或 `let` 关键词来声明变量：
 
+```javascript
+var myName;
+let myAge;
+```
+
+> 变量的声明可以不使用关键字，此时声明的变量是全局变量；而使用 `var` 修饰的变量，则是局部变量。
+
+上面两个变量声明后，没有数值，是个空的容器（ `undefined`），若需要为变量赋值进行初始化，使用等号 `=`
+
+```javascript
+myName = 'JoyDee';
+myAge = 37;
+```
+
+或者，可以像下面这样在声明变量的同时给其初始化：
+
+```javascript
+let myName = 'JoyDee';
+var myAge = 37;
+```
+
+### 1.3.2 数据类型
 
 > 编程语言的类型系统分为强类型（strongly typed）和弱类型（weakly typed）两种，目前没有明确的定义，但主要用以描述编程语言对于混入不同资料类型的值进行运算时的处理方式。
 
-JavaScript是弱类型的，这意味着变量可以被隐式地转换为另一个类型。
+JavaScript 是弱类型的，这意味着无需指定变量将包含什么数据类型，同时，变量可以被隐式地转换为另一个类型。
+
+JavaScript 数据类型分两种：
+
++ 基本数据类型：
+
+  + `number`：数字，包括：整数、小数、NaN（*not a number*）
+  + `string`：字符串，例如 `"abc"`、`"a"`、`'abc'`
+  + `boolean`：取值仅有 `true` 或 `false`
+  + `null`：主动释放一个变量引用的**对象**，表示一个变量不再指向任何对象地址。
+  + `undefined`：未定义，若一个变量没有给初始化值，则会被**默认**赋值为 `undefined`。
+
+  > 不同于 Java，JS 开辟变量存储空间时，并不会定义该空间将来要存储的数据类型，故更新变量值时，其数据类型是不限定的。
+
++ 引用数据类型：对象
+
+  + `Function`
+  + `Array`
+  + `Boolean`
+  + `Date`
+  + `Math`
+  + `Number`
+  + `String`
+  + `RegExp`：正则表达式对象
+  + `Global`：全局对象
+
+  >  在下面的章节会重点讨论这些对象是如何创建、使用。
+
+`typeof` 这一特殊的操作符，会返回所传递给它的变量的数据类型。如：
+
+```javascript
+let myNumber = 'aaa'; 
+typeof myNumber; // oops, this is a string
+myNumber = 500; 
+typeof myNumber; // much better — now this is a number
+```
+
+注意，`null` 经 `typeof` 运算后得到的返回结果为 `object` 。
+
+```javascript
+var tt = null;
+document.write(typeof (tt)); //object
+```
+
+## 1.4 运算符
+
+
+
+## 1.5 流程控制语句
+
+如 `if...else...`、`while`、`do..while`、`for` 等 与 Java 类似
+
+但是，对于 `switch` 语句：
+
++ 在 Java 中，`switch` 语句只可接受的数据类型：`byte`、`int`、`short`、`char`、枚举（Java 1.5）、`String`（Java 1.7）
+
+  ```java
+  switch(变量):
+      case 值1:
+      ...
+      case 值2:
+      ...
+  ```
+
++ 在 JS 中，`switch` 语句可接受**任意**的原始数据类型。
+
+### 案例：九九乘法表
+
+```html
+<!DOCTYPE html>
+<html lang="en">
+    <head>
+        <meta charset="UTF-8">
+        <title>99乘法表</title>
+        <style>
+            td{
+                border: 1px solid;
+            }
+        </style>
+
+        <script>
+            document.write("<table  align='center'>");
+
+            //1.完成基本的for循环嵌套，展示乘法表
+            for (var i = 1; i <= 9 ; i++) {
+                document.write("<tr>");
+                for (var j = 1; j <=i ; j++) {
+                    document.write("<td>");
+                    //输出  1 * 1 = 1
+                    document.write(i + " * " + j 
+                                   + " = " + ( i*j) 
+                                   +"&nbsp;&nbsp;&nbsp;");
+                    document.write("</td>");
+                }
+                document.write("</tr>");
+            }
+
+            //2.完成表格嵌套
+            document.write("</table>");
+        </script>
+    </head>
+    <body>
+        
+    </body>
+</html>
+```
+
+## 1.6 基本对象
+
+### 1.6.1 `Function` 
+
+函数(方法)对象。
+
+（一）创建方式：有两种：
+
+```javascript
+function 方法名称(形式参数列表){
+    方法体
+}
+```
+
+```javascript
+var 方法名 = function(形式参数列表){
+    方法体
+}
+```
+
+（二）调用：
+
+```javascript
+方法名称(实际参数列表);
+```
+
+（三）属性：
+
+`length`：它记录 形式参数 的**个数**。
+
+（四）特点：
+
+
+
+
+
+
+
