--- a/_posts/Web前端/2021-02-10-JS1.md
+++ b/_posts/Web前端/2021-02-10-JS1.md
@@ -145,6 +145,38 @@ JavaScript 数据类型分两种：
 
   >  在下面的章节会重点讨论这些对象是如何创建、使用。
 
+使用举例：
+
+```html
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <title>Title</title>
+    <script>
+        var a = 23333;
+        var b = NaN;
+        var c = false;
+        var obj = null;
+        var obj2 = undefined;
+        var obj3;
+        document.write(a + "<br>"); //23333
+        document.write(b + "<br>"); //NaN
+        document.write(c + "<br>"); //false
+        document.write(obj + "<br>"); //null
+        document.write(obj2 + "<br>"); //undefined
+        document.write(obj3 + "<br>"); //undefined
+        var num1 = 1, num2 = 3, num3 = 4;
+        document.write(num1 / num2 + "<br>" + num3 % num2 + "<br>"); //1
+        var res = "122" < 123;
+        document.write(res + "<br>"); //true
+    </script>
+</head>
+<body>
+</body>
+</html>
+```
+
 `typeof` 这一特殊的操作符，会返回所传递给它的变量的数据类型。如：
 
 ```javascript
@@ -163,7 +195,60 @@ document.write(typeof (tt)); //object
 
 ## 1.4 运算符
 
+### 1.4.1 一元运算符
 
+`++`，`–-`：自增/自减
+
+`+`，`-`：正负号
+
+> 注意，在 JS 中，若运算数不是运算符所要求的类型，那么 JS 引擎会自动地将运算数进行类型转换。
+
+其他类型自动转 `number`：
+
++ `string` —> `number`：按照字面值转换，若字面值不是数字，则转为 `NaN`，如：
+
+  ```javascript
+  var b = + "abc123"; //b 则转换为数字类型的 NaN
+  var c = + "123"; //b 转换为（数字类型的）整数
+  ```
+
++ `boolean`—>`number`：`true` 转为 1，`false` 转为 0
+
+附：其他类型转 `boolean`：
+
++ `number`—>`boolean`：0 或 `NaN` 为假，其他为真（区别于 Java）
++ `string`—>`boolean`：除了空字符串（`""`），其他均为 `true`
++ `null`、`undefined` 均为 `false`
++ **所有对象均为 `true`**
+
+### 1.4.2 算术运算符、赋值运算符（略）
+
+### 1.4.3 比较运算符
+
+`>`，`<`，`>=`，`<=`，`==`，**`===`（全等于）**
+
++ 类型相同：直接比较
+
+  > 字符串间是以字典序进行比较。
+
++ 类型不同：先进行**类型转换**，再比较。如：
+
+  ```javascript
+  var res = "122" < 123; // res 值为 true
+  ```
+
+  对于 `===`，是先判断类型是否一致，若不一致，则返回为 `false`。再者，判断数值。
+
+### 1.4.4 逻辑运算符
+
+`&&`，`||`，`!`
+
+### 1.4.6 三元运算符
+
+```javascript
+var a = 3, b = 4;
+var c = a > b ? "a was bigger" : "b was bigger";
+```
 
 ## 1.5 流程控制语句
 
