Update the post about JS & HTML

--- a/_posts/Web前端/2021-02-10-JS1.md
+++ b/_posts/Web前端/2021-02-10-JS1.md
@@ -311,7 +311,7 @@ var c = a > b ? "a was bigger" : "b was bigger";
 
 ## 1.6 基本对象
 
-### 1.6.1 `Function` 
+### 1.6.1 Function 函数（方法）对象
 
 函数(方法)对象。
 
@@ -337,13 +337,141 @@ var 方法名 = function(形式参数列表){
 
 （三）属性：
 
-`length`：它记录 形式参数 的**个数**。
++ `length`：它记录 形式参数 的**个数**。
 
 （四）特点：
 
+1. 方法定义时，形参的类型、返回值类型均不用写（都是 `var` 变量）
 
+2. 方法是一个对象，若定义另一个名称相同的方法，会覆盖之前定义的方法。
 
+3. 在 JS 中，方法的调用 只与方法的名称有关，和**参数列表无关**。
 
+   ```javascript
+   function fun2(a, b){
+       alert(a);
+   }
+   
+   fun(3);
+   fun(); //同样能够执行
+   fun(1, 2); 
+   fun(1, 2, 3);
+   ```
 
+4. 在方法声明中有一个隐藏的内置对象（数组）`arguments`，封装了所有的实际参数。
 
+   ```javascript
+   /* 求任意个数的和 */
+   function sum(){
+       var res = 0;
+       for(var i = 0; i < arguments.length; i++){
+           res += arguments[i];
+       }
+       return res;
+   }
+   var a = add(1, 2, 3, 4, 5); //可以传任意多个参数
+   ```
+
+### 1.6.2 Array 数组对象
+
+（一）创建方式：
+
+```javascript
+var arr = new Array(元素列表); // 方式一
+var arr = new Array(默认长度); // 方式二
+var arr = [元素列表]; // 方式三
+```
+
+（二）属性：
+
++ `length`：数组的长度
+
+（三）相关方法：
+
++ `join(参数)`：将数组中的元素按照指定的分隔符拼接为字符串。
+
+  ```javascript
+  var arr = [1, "abc", true];
+  document.write(arr.join() + "<br>"); //不传参数则默认用逗号分隔—— "1,abc,true"
+  document.write(arr.join(--) + "<br>"); //字符串变为 "1--abc--true"
+  ```
+
++ `push()`：向数组的末尾添加一个或更多元素，并返回新的长度。
+
+（四）特点：一个数组中的元素类型不限定，且长度是可变的。
+
+```javascript
+var arr = [1, "abc", true];
+arr[10] = "2333" 
+document.write(arr[10] + "<br>"); //输出 2333
+document.write(arr[9] + "<br>"); //输出 undefined
+```
+
+### 1.6.3 Date 日期对象
+
+（一）创建方式：
+
+```javascript
+var mydate = new Date();
+```
+
+（二）方法：
+
++ `toLocalString()`：返回当前 `Date` 对象对应的本地时间的字符串
++ `getTime()`：获取毫秒值，返回当前日期对象描述的时间到 1970年1月1日零点的毫秒值之差
+
+### 1.6.4 Math 数学对象
+
+（一）创建方式：
+
+`Math` 对象在使用这个对象之前对它进行定义，即可直接调用其方法。即：
+
+```javascript
+Math.方法名();
+```
+
+（二）属性：
+
++ `PI`
+
+（三）方法：
+
++ `random()`：返回介于 0（包含） ~ 1（不包含） 之间的一个随机数
++ `ceil()`：对传入的参数进行上舍入
++ `floor()`：对传入的参数进行下舍入
++ `round()`：对传入的参数进行四舍五入
+
+### 1.6.5 RegExp 正则表达式对象
+
+（零）正则表达式：定义字符串的组成规则
+
+1. 单个字符：`[]`，例如：`[a]`、`[ab]`、`[a-zA-Z0-9_]`
+
+   利用特殊符号代表的单个字符：
+
+   + `\d`：单个数字字符，从 `[0-9]` 取值
+   + **`\w`**：单个单词字符，`[a-zA-Z0-9_]`
+
+2. 量词符号：
+
+   + `?`：表示出现 0 次或 1 次
+   + `*`：表示出现 0 次或 多次
+   + `+`：表示出现 1 次或 多次 
+   + `{m, n}`：表示出现  $[m, n]$ 次数量，`{, n}` 代表最多 n 次，`{m, n}` 代表 最少 m 次
+
+3. 始末符号：
+
+   + `^`：开始
+   + `$`：结束
+
+（二）正则对象的创建
+
+```javascript
+var reg = new RegExp("正则表达式"); //方式一
+var reg = /正则表达式/;
+```
+
+（三）相关方法
+
++ `test(参数)`：验证指定的字符串是否符合正则表达式定义的规范
 
