Update the post of JavaSE

--- a/_posts/Java/JavaSE/2021-02-04-Junit、反射、注解.md
+++ b/_posts/Java/JavaSE/2021-02-04-Junit、反射、注解.md
@@ -440,9 +440,9 @@ Java 定义了一套注解，共有 7 个，3 个在 `java.lang` 中，剩下 4 
 
   >  源码中，`Target` 类中有一成员，为枚举类数组`ElementType[]`，名称为 `value`
 
-  + `TYPE`：该注解只能作用在类上
-  + `METHOD`：该注解只能作用在方法上
-  + `FIELD`：该注解只能作用在成员变量上
+  + `TYPE`：标记该注解只能作用在类上
+  + `METHOD`：标记该注解只能作用在方法上
+  + `FIELD`：标记该注解只能作用在成员变量上
 
   ```java
   @Target(value={ElementType.TYPE, ElementType.METHOD})
@@ -501,7 +501,7 @@ public @interface 注解名称{
   }
   ```
 
-三、属性：接口中的抽象方法。其要求有：
+三、属性：接口中的**抽象方法**。其要求有：
 
 + 属性的返回值类型只能为：基本数据类型、`String`、枚举、注解、以上类型的数组
 
@@ -571,7 +571,7 @@ public @interface MyAnno {
  */
 ```
 
-`Person.jva`文件：
+`Person.java`文件：
 
 ```java
 package JoyDee.LearningReflection;
