--- a/_posts/Java/JavaSE/2020-11-21-网络.md
+++ b/_posts/Java/JavaSE/2020-11-21-网络.md
@@ -63,7 +63,10 @@ math: true
 
    常用命令有：
 
-   + 查看本机IP地址，在控制台输入：`ipconfig`
+   + 查看本机IP地址，在控制台输入：`ipconfig` 或者 通过控制面板
+
+     <img src="https://gitee.com/j__strawhat/MyImages/raw/master/20210220224143.png"/>
+
    + 检查网络是否连通，在控制台输入：`ping IP地址`（如`ping 220.181.57.216`）
 
 3. **端口号**
