Upload the post of Servlet

--- a/_posts/Java/JavaSE/2020-10-18-开发前言与环境搭建、基础语法.md
+++ b/_posts/Java/JavaSE/2020-10-18-开发前言与环境搭建、基础语法.md
@@ -189,7 +189,7 @@ public class HelloWorld{ //public class后面定义一个类的名称，类为Ja
 执行命令解析
 
 + `javac`命令用于将java源文件编译为class字节码文件，后面紧跟java文件的文件名，如：`javac HelloWorld.java`；运行该命令后，若成功编译，会出现`HelloWorld.class`文件
-+ `java`命令运行文件，紧跟于java文件中的类名，如`java HelloWorld`（注意，`java`命令后面不加`.class`）
++ `java`命令运行文件，紧跟于java文件中的类名，如`java HelloWorld`（注意，`java`命令针对于 `class` 文件，但是在输入命令时不加`.class`后缀）
 
 > `javac`程序是一个Java编译器，将文件`HelloWorld.java`编译成`HelloWorld.class`，并发送到Java虚拟机，Java虚拟机执行编译器存放在class文件中的字节码。
 
