Add "配置" tag on the posts

--- a/_posts/Java/JavaWeb/2021-02-07-JDBC.md
+++ b/_posts/Java/JavaWeb/2021-02-07-JDBC.md
@@ -2,7 +2,7 @@
 title: 「JavaWeb学习笔记01」JDBC 编程
 author: JoyDee
 categories: [Java, JavaWeb]
-tags: [JavaWeb, MySQL]
+tags: [JavaWeb, MySQL, 配置]
 date: 2021-02-07 17:35:00 +0800
 math: true
 ---
