--- a/_posts/Java/JavaWeb/2021-02-08-数据库连接池.md
+++ b/_posts/Java/JavaWeb/2021-02-08-数据库连接池.md
@@ -2,7 +2,7 @@
 title: 「JavaWeb学习笔记02」数据库连接池
 author: JoyDee
 categories: [Java, JavaWeb]
-tags: [JavaWeb, MySQL]
+tags: [JavaWeb, MySQL, 配置]
 date: 2021-02-08 22:03:00 +0800
 math: true
 ---
