--- a/_posts/Java/JavaWeb/2021-02-20-Servlet.md
+++ b/_posts/Java/JavaWeb/2021-02-20-Servlet.md
@@ -2,11 +2,11 @@
 title: 「JavaWeb学习笔记03」Tomcat使用与Servlet基础
 author: JoyDee
 categories: [Java, JavaWeb]
-tags: [JavaWeb]
+tags: [JavaWeb, Servlet, 配置]
 date: 2021-02-20 21:03:00 +0800
 ---
 
-Web 是一种分布式应用架构，旨在共享发布在网络上的各个Web服务器中的所有互相链接的信息。WWW（World Wide Web）  是指全球范围内的 Web，它以 Internet 为网络平台。
+**Web** 是一种分布式应用架构，旨在共享发布在网络上的各个Web服务器中的所有互相链接的信息。**WWW（World Wide Web）**  是指全球范围内的 Web，它以 **Internet** 为网络平台。
 
 Internet 是来自世界各地的众多相互连接的计算机和其他设备的集合，而 WWW 则是 Internet 上的一种分布式应用架构。
 
@@ -124,7 +124,7 @@ apache-tomcat-8.5.63/
 
 1. 直接将项目放到 `Tomcat安装目录\webapps` 目录下，以后要运行查看项目时，在浏览器输入地址：`localhost:端口号/虚拟目录/资源文件名` 
 
-   > 可以将 项目打包成 war 包，再将 war 包 放置到 webapps 目录下。（拷贝到 webapps目录后，war 包会自动地解压缩。
+   > 可以将 项目打包成 war 包，再将 war 包 放置到 webapps 目录下。（拷贝到 webapps目录后，war 包会自动地解压缩。
 
 2. 在 `Tomcat安装目录\conf\Catalina\localhost\` 创建任意名称的 XML 文件，在文件中编写：
 
@@ -152,13 +152,13 @@ apache-tomcat-8.5.63/
 
    > `Using CATALINA_BASE:   "C:\Users\luffy\.IntelliJIdea2019.3\system\tomcat\_LearningJavaWeb"`
 
-   打开该目录后，进入 `conf` 文件夹便能看到 xml 配置文件
+   打开该目录后，进入 `conf` 文件夹便能看到 xml 配置文件
 
    <img src="https://gitee.com/j__strawhat/MyImages/raw/master/image-20210221205809931.png"/>
 
 2. 关于 IDEA 工作空间项目 与 Tomcat 部署的 Web 项目
 
-   Tomcat 真正访问的是“ Tomcat 部署的 Web 项目”（其路径，类似于 `E:\LearningJavaWeb\out\artifacts\MyEEProjects_war_exploded`），"Tomcat 部署的 Web 项目” 也同时对应着 IDEA 工作空间项目 的 `Web` 目录下所有资源。而 IDEA 工作空间项目的 `Web\WEB-INF`  的资源不能通过启动服务后被浏览器直接访问。
+   Tomcat 真正访问的是“ Tomcat 部署的 Web 项目”（其路径，类似于 `E:\LearningJavaWeb\out\artifacts\MyEEProjects_war_exploded`），"Tomcat 部署的 Web 项目” 也同时对应着 IDEA 工作空间项目 的 `Web` 目录下所有资源。而 IDEA 工作空间项目的 `Web\WEB-INF`  的资源不能通过启动服务后被浏览器直接访问。
 
    因此，不要将你的静态资源，放到 IDEA 工作空间项目的 `Web\WEB-INF` 目录下。
 
@@ -267,7 +267,7 @@ public class ServletDemo01 implements Servlet {
 </web-app>
 ```
 
->  在 `<servlet>` 元素中，可以加入 `<load-on-startup>` 元素，它指定当 Servlet 容器启动 Web 应用时，加载各个 Servlet 的次序。若值为**正数或零**，Servlet 容器优先加载数值小的 Servlet；若值为负数或没有设定，Servlet 容器将在 **客户端首次访问** 这个 Servlet 时加载它。
+>  在 `<servlet>` 元素中，可以加入 `<load-on-startup>` 元素，它指定当 Servlet 容器启动 Web 应用时，加载各个 Servlet 的次序。若值为**正数或零**，Servlet 容器优先加载数值小的 Servlet；若值为负数或没有设定，Servlet 容器将在 **客户端首次访问** 这个 Servlet 时加载它。
 
 ### 五、启动 Tomcat 服务器
 
@@ -381,7 +381,7 @@ Servlet 作为 JavaWeb 应用的最核心组件，其生命周期，同样由 Se
   >
   > 1. 当前 Web 应用处于运行时阶段，特定 Servlet 被**客户端首次请求访问**。（多数情况）
   > 2. 若在 web.xml 文件中为一个 Servlet 设置 `<load-on-startup>` 元素，则当 **Servlet 容器启动** Servlet 所属 Web 应用时，就会初始化这个 Servlet。
-  > 3. 当 Web 应用被重新启动时，Web 应用中所有 Servlet 都会在特定时刻被重新初始化
+  > 3. 当 Web 应用被重新启动时，Web 应用中所有 Servlet 都会在特定时刻被重新初始化
 
   1. Servlet 容器**加载** Servlet 类，将它的 `.class` 文件中数据读入内存中；
 
@@ -401,7 +401,7 @@ Servlet 作为 JavaWeb 应用的最核心组件，其生命周期，同样由 Se
 
 + **销毁阶段**：（`destroy()`）
 
-  当 Web 应用被终止时，Servlet 容器会先调用 Web 应用中所有 Servlet 对象的**`destroy()` 方法**，释放 Servlet 所占用的资源。然后再销毁这些 Servlet 对象及与之关联的 ServletConfig 对象。
+  当 Web 应用被终止时，Servlet 容器会先调用 Web 应用中所有 Servlet 对象的**`destroy()` 方法**，释放 Servlet 所占用的资源。然后再销毁这些 Servlet 对象及与之关联的 ServletConfig 对象。
 
 ## 4.4 Servlet 体系结构
 
@@ -413,11 +413,3 @@ Servlet 作为 JavaWeb 应用的最核心组件，其生命周期，同样由 Se
 + **`HttpServlet`**（抽象类）：对HTTP协议的一种封装，简化了大量操作，定义类继承 HttpServlet 时，只需要覆写 `doGet` / `doPost` 方法即可。
 
 
-
-
-
-
-
-
-
-![image-20210221221751029](https://gitee.com/j__strawhat/MyImages/raw/master/image-20210221221751029.png)
