Modify the description of URL

--- a/_posts/Java/JavaWeb/2021-02-07-JDBC.md
+++ b/_posts/Java/JavaWeb/2021-02-07-JDBC.md
@@ -411,7 +411,7 @@ public class JDBCUtils {
             Properties pro = new Properties(); 
             //2. 获取配置文件的路径
             ClassLoader classLoader = JDBCUtils.class.getClassLoader();//使用类加载器
-            //URL为统一资源定位符，定位到该配置文件的绝对路径
+            //URL为统一资源定位器，定位到该配置文件的绝对路径
             URL resurl = classLoader.getResource("jdbc.properties");
             String path = resurl.getPath(); //得到字符串路径
             //3. 加载配置文件
