Update many posts on Java

--- a/_posts/Java/JavaSE/2020-10-24-对象与类.md
+++ b/_posts/Java/JavaSE/2020-10-24-对象与类.md
@@ -85,7 +85,7 @@ public class Phone{
 | 生命周期 | 随方法进栈而诞生（随方法出栈而消失） | 随对象创建而诞生（随对象被垃圾回收而消失） |
 |  默认值  |    无默认值，若要使用则必须赋值。    |      若没有赋值，则会**自带默认值**。      |
 
-### 4.2.2 标准类的定义
+### 4.2.2 标准类（Java Bean）的定义 
 
 标准的类，也称*Java Bean*。它需满足：
 
