--- a/_posts/Java/JavaSE/2020-11-12-IO流.md
+++ b/_posts/Java/JavaSE/2020-11-12-IO流.md
@@ -547,7 +547,7 @@ public class JustTest {
 
    > 关于关闭和**刷新**：关闭一个输出流的同时，也会冲刷用于该输出流的缓冲区：所有被临时置于缓冲区中，以使用更大的包的形式传递的**字符**在关闭输出流时都将被送出。
 
-   当数据不足以填充缓冲区，而又需要往客户端传数据，为了解决这个问题，便有了 `flush` 的概念，将缓冲区的数据“强迫发送”。
+   当数据不足以填充缓冲区，而又需要往客户端传数据，为了解决这个问题，便有了 `flush` 的概念，将缓冲区的数据“强迫发送”。
 
    此外，如果既想写出数据，又想继续使用流，也需要`flush`方法。
 
@@ -733,6 +733,56 @@ public class JustTest {
   居住地----广州
   年龄----20岁
   ```
+
+### BeanUtils 工具类
+
+该工具类，用于简化封装 JavaBean，使用前，需要导入 jar 包（以 `commons-beanutils-1.8.0.jar` 为例）。
+
+在 IDEA 中导入类时，注意是选择 apache 的：
+
+<img src="https://gitee.com/j__strawhat/MyImages/raw/master/20210223230303.png" style="zoom:67%;" />
+
+相关方法：
+
++ `setProperty()`
++ `getProperty()`
++ `populate(Object obj, Map map)`：将 Map 集合的键值对信息，封装到对应的 JavaBean 对象中。
+
+代码举例如下：（已提前设计好JavaBean：`User`）
+
+```java
+package top.JoyDee.test;
+
+import org.apache.commons.beanutils.BeanUtils;
+import org.junit.Test;
+import top.JoyDee.domain.User;
+import java.lang.reflect.InvocationTargetException;
+
+public class BeanUtilsTest {
+    @Test
+    public void test(){
+        User user = new User();
+        try {
+            BeanUtils.setProperty(user, "password", "123456");
+            BeanUtils.setProperty(user, "username", "Zoro");
+            System.out.println(user);
+            //输出为：User{id=0, username='Zoro', password='123456'}
+
+            String password = BeanUtils.getProperty(user, "password");
+            System.out.println(password); //输出为：123456
+
+        } catch (IllegalAccessException e) {
+            e.printStackTrace();
+        } catch (InvocationTargetException e) {
+            e.printStackTrace();
+        } catch (NoSuchMethodException e) {
+            e.printStackTrace();
+        }
+    }
+}
+```
+
+
 
 ## 13.7 缓冲流
 
