--- a/_posts/Java/JavaWeb/2021-02-07-JDBC.md
+++ b/_posts/Java/JavaWeb/2021-02-07-JDBC.md
@@ -229,7 +229,7 @@ public class JDBCdemo {
 
 方法`ResultSet executeQuery(String sql)`的使用举例：
 
-> 可以注意到有大量的重复代码，在下几节中会讨论简化代码的方法（抽取并封装为一个工具类），这里仅仅是展示方法的用法。
+> 可以注意到有大量的重复代码，在下几节中会讨论简化代码的方式（抽取并封装为一个工具类），这里仅仅是展示方法的用法。
 
 ```java
 package JoyDee.LearningJDBC;
