--- a/_posts/Java/JavaWeb/2021-02-08-数据库连接池.md
+++ b/_posts/Java/JavaWeb/2021-02-08-数据库连接池.md
@@ -172,6 +172,8 @@ public class DruidByUtils {
 
 Spring 框架对 JDBC 进行了简单封装，提供了一个JDBCTemplate 对象简化了JDBC的开发。
 
+>  ❗ 自定义的类的成员变量，必须与 SQL 中的列名称相同，如此，才能够使用 `queryForObject` 方法进行封装。
+
 ### 2.3.1 使用步骤
 
 1. 导入几个 jar 包（见下图）
@@ -194,7 +196,7 @@ Spring 框架对 JDBC 进行了简单封装，提供了一个JDBCTemplate 对象
      query(sql, new BeanPropertyRowMapper<自定义类>(自定义类.class))
      ```
 
-   + `queryForObject()`：查询结果，并将结果封装为对象，常用于 聚合函数 的查询
+   + `queryForObject()`：查询结果，并将结果封装为**对象**，常用于 聚合函数 的查询
 
 #### 简单使用举例（使用工具类 JdbcUtils ）
 
