--- a/_posts/Java/JavaWeb/2021-02-20-Servlet.md
+++ b/_posts/Java/JavaWeb/2021-02-20-Servlet.md
@@ -203,6 +203,10 @@ apache-tomcat-8.5.63/
 ### 二、在 src 目录下定义一个类，实现 Servlet 接口：
 
 > src 目录，是在 开发 JavaWeb 应用阶段，开发人员自定义的目录，该目录存放**所有 Java 类的源文件**。当 Web 应用产品正式发布阶段，若不希望对外公开 Java 源代码，则可将 src 目录转移至其他地方。
+>
+> 注意， src目录下的文件，在部署时，会自动地放到**`/web/WEB-INF/classes`** 。
+>
+> 另外，**类加载器**只能获取 src 目录下的文件路径。
 
 ```java
 public class ServletDemo01 implements Servlet {
@@ -412,4 +416,61 @@ Servlet 作为 JavaWeb 应用的最核心组件，其生命周期，同样由 Se
 + `GenericServlet`（抽象类）：将 Servlet 接口中其他的方法做了默认空实现，只留 `service()` 方法作为抽象方法
 + **`HttpServlet`**（抽象类）：对HTTP协议的一种封装，简化了大量操作，定义类继承 HttpServlet 时，只需要覆写 `doGet` / `doPost` 方法即可。
 
+IDEA 快捷创建`HttpServlet`：
+
+右键新建类时，可选择 Create New Servlet，弹出窗口：
+
+<img src="https://gitee.com/j__strawhat/MyImages/raw/master/20210223150318.png"/>
+
+> 但要记得，要将注解改为：`@WebServlet("/Servlet相对URL路径入口")`
+
+## 4.5 ServletContext 接口
+
+`ServletContext` 是 Servlet 与 Servlet 容器之间直接通信的接口。在 Servlet 容器在启动一个 Web 应用时，会为其创建一个 `ServletContext` 对象，每个 Web 应用都有**唯一**的 `ServletContext` 对象。
+
+`ServletContext`对象，相当于 Web 应用的**总管家**，同一个 Web 应用中的**所有 `Servlet` 对象都共享一个**总管家（这些对象们，均可通过这个总管家来访问容器中的各种资源）
+
+### 4.5.1 获取 ServletContext
+
++ 通过 `request` 对象来获取：
+
+  ```java
+  request.getServletContext();
+  ```
+
++ 通过 `HttpServlet` 对象来获取：
+
+  ```java
+  this.getServletContext();
+  ```
+
+### 4.5.2 相关方法
+
+（一）获取 MIME 类型：
+
++ `String getMimeType(String file)`：传入参数为文件名称字符串，该方法能够通过文件名称识别并返回对应的 MIME 类型串。
+
+（二）共享数据：
+
+`ServletContext` 对象的范围是最大的。通过这个对象，能够获取所有用户所有请求的相关数据
+
++ `setAttribute(String name,Object value)`
++ `getAttribute(String name)`
++ `removeAttribute(String name)`
+
+（三）获取文件的真实路径
+
++ `getRealPath(String path)`：根据参数指定的**虚拟路径**，返回文件系统中的一个**真实路径**。
+
+  ```java
+  ServletContext context = this.getServletContext(); //通过HttpServlet获取
+  String realPath = context.getRealPath("/WEB-INF/classes/a.txt"); //找到src目录下资源，对应的真实路径
+  File file = new File(realPath);
+  System.out.println(realPath);
+  /* 输出结果为：
+   * E:\LearningJavaWeb\out\artifacts\MyEEProjects_war_exploded\WEB-INF\classes\a.txt
+   */
+  ```
+
+  
 
