--- a/_posts/Web前端/2021-02-14-JS02.md
+++ b/_posts/Web前端/2021-02-14-JS02.md
@@ -124,6 +124,35 @@ math: true
 
 <img src="https://gitee.com/j__strawhat/MyImages/raw/master/点击事件.gif"/>
 
+校验码图片更新：
+
+```html
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <title>注册</title>
+    <script>
+        window.onload = function () {
+            //1. 获取图片对象
+            var img = document.getElementById("checkCodeImg");
+            //2. 绑定单机事件
+            img.onclick = function () {
+                //获取时间戳，从而得到一个“唯一”而“不重复”的值
+                var date = new Date().getTime();
+                img.src = "/MyEEProjects/checkCodeServlet?" + date;
+                //通过传入无用但“唯一”而“不重复”的参数，能够保证点击时更新图片缓存
+            }
+        }
+    </script>
+</head>
+<body>
+    <img id = "checkCodeImg" src = "/MyEEProjects/checkCodeServlet" />
+    <!--验证码图片-->
+</body>
+</html>
+```
+
  （七）表单事件：
 
 1. `onsubmit`：确认按钮被点击
@@ -591,7 +620,7 @@ HTML DOM 模型被构造为**对象**的树：
 
 - JavaScript 能够改变页面中的所有 HTML 元素
 
-  + 通过 `innerHTML` 来修改标签体的值
+  + 通过 `innerHTML` 来修改标签体的值
 
 - JavaScript 能够改变页面中的所有 HTML 属性
 
