--- a/_posts/数据库/2021-01-27-MySQL环境搭建及SQL基础.md
+++ b/_posts/数据库/2021-01-27-MySQL环境搭建及SQL基础.md
@@ -112,6 +112,10 @@ net start mysql
 
 ### 2.2.2 登录
 
+>  注意，登陆之前一定要前启动 MySQL，否则有可能出现如下报错：
+>
+> <img src="https://gitee.com/j__strawhat/MyImages/raw/master/20210223181651.png"/>
+
 #### 方法一：命令行连接数据库
 
 + 通过 `cd` 命令进入mySQL安装路径下的 `bin` 文件夹。
