End of the Winter Holiday 2021

--- a/_posts/Java/JavaWeb/2021-02-20-Servlet.md
+++ b/_posts/Java/JavaWeb/2021-02-20-Servlet.md
@@ -414,7 +414,7 @@ Servlet 作为 JavaWeb 应用的最核心组件，其生命周期，同样由 Se
 注意到：
 
 + `GenericServlet`（抽象类）：将 Servlet 接口中其他的方法做了默认空实现，只留 `service()` 方法作为抽象方法
-+ **`HttpServlet`**（抽象类）：对HTTP协议的一种封装，简化了大量操作，定义类继承 HttpServlet 时，只需要覆写 `doGet` / `doPost` 方法即可。
++ **`HttpServlet`**（抽象类）：对HTTP协议的一种封装，简化了大量操作，定义类继承 HttpServlet 时，**只需要覆写 `doGet` / `doPost` 方法即可**。
 
 IDEA 快捷创建`HttpServlet`：
 
@@ -422,7 +422,9 @@ IDEA 快捷创建`HttpServlet`：
 
 <img src="https://gitee.com/j__strawhat/MyImages/raw/master/20210223150318.png"/>
 
-> 但要记得，要将注解改为：`@WebServlet("/Servlet相对URL路径入口")`
+但要记得，要将注解改为：`@WebServlet("/Servlet相对URL路径入口")`，或者通过 IDEA 的模板格式修改：
+
+<img src="https://gitee.com/j__strawhat/MyImages/raw/master/20210225172717.png"/>
 
 ## 4.5 ServletContext 接口
 
